--- a/css/contact.css
+++ b/css/contact.css
@@ -10,13 +10,9 @@
     background: #262626;
   }
 
-  .olympus-nav-wrapper{
-    height: 78px; 
-}
-
 .contact-navbar{
     display: flex;
-    position: fixed;
+    /* position: fixed; */
     height: 78px;
     width: 100%;
     font-size: 18px;
@@ -24,7 +20,7 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
     opacity: 0.9;
     border-bottom: 5px solid #ffb600;
-    z-index: 9999;
+    /* z-index: 9999; */
 }
 
  a {
@@ -57,8 +53,31 @@
    cursor: pointer;
 }
 
-.contact-container {
-    width: 50%;
-    height: 100vh;
-    color: red;
+.table-container {
+  margin: auto;
+  margin-top: 20px;
+  width: 50%;
+  height: auto;
+  border-radius: 10px;
+  background: #ffb600;
+  padding: 16px 24px;
 }
+
+.contact-info-title {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 500;
+  color: #232323;
+}
+
+.contact-information-container {
+  display: flex;
+  margin: auto;
+  margin-top: 16px;
+  padding: 16px;
+}
+
+.contact-param {
+  min-width: 150px;
+}
+
