--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,7 @@ body {
 .card-img-div {
   width: 60px;
   height: 70px;
-  background: transparent url("../images/msa-log.png") 0% 0% no-repeat
+  background: transparent url("../images/settings.png") 0% 0% no-repeat
     padding-box;
   opacity: 1;
   margin-top: 20px;
@@ -125,7 +125,7 @@ body {
 #printer-card-img-div {
   width: 60px;
   height: 60px;
-  background: transparent url("../images/printer-settings.png") 0% 0% no-repeat
+  background: transparent url("../images/printer.png") 0% 0% no-repeat
     padding-box;
   opacity: 1;
   margin-top: 20px;
@@ -170,26 +170,25 @@ body {
 }
 
 #contact-card-img-div {
-  width: 110px;
-  height: 130px;
-  background: transparent url("../images/contact-image.png") 0% 0% no-repeat
+  width: 60px;
+  height: 60px;
+  background: transparent url("../images/contact.png") 0% 0% no-repeat
     padding-box;
   opacity: 1;
-  margin-top: 15px;
-  margin-left: -15px;
-  background-size: 110px;
+ 
+  /* margin-top: 15px;
+  margin-left: -15px; */
+  background-size: 60px;
 }
 
 .card-container:hover #contact-card-img-div {
-  width: 115px;
-  height: 135px;
-  background-size: 115px;
+  width: 65px;
+  height: 65px;
+  background-size: 65px;
   transition: all 0.4s ease 0s;
 }
 
-#contact-card-title {
-  margin-top: -30px;
-}
+
 
 .card-container:hover #contribute-settings-card-img-div {
   width: 65px;
