Updated the complaint logo.

--- a/css/index.css
+++ b/css/index.css
@@ -172,7 +172,7 @@ body {
 #sports-med-complaint-div {
   width: 50px;
   height: 60px;
-  background: transparent url("../images/complaint.png") 0% 0% no-repeat
+  background: transparent url("../images/complaint3.png") 0% 0% no-repeat
     padding-box;
   opacity: 1;
   margin-top: 20px;
